# cppdev-hw8-boost

./: CMakeLists.txt  files_finder.cpp  files_finder.h  main.cpp  tests.cpp
.github/workflows/: release.yml
dir2/: file2.1.txt
